Fix bookmark clipping
Fixes #4635

--- a/less/bookmarksToolbar.less
+++ b/less/bookmarksToolbar.less
@@ -44,7 +44,7 @@
     color: black;
     cursor: default;
     font-size: 11px;
-    line-height: 11px;
+    line-height: 12px;
     margin: auto var(--bookmark-item-margin);
     padding: 2px var(--bookmark-item-padding);
     text-overflow: ellipsis;
